--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,13 @@
-{
-  "name": "ProjectStickFightingGame",
+﻿{
+  "name": "stickman-session-service",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.0",
-    "cors": "^2.8.5"
+    "morgan": "^1.10.0"
   }
 }
